[package]
name = "zkinterface-benchmark"
version = "0.1.0"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkinterface = "1.0.6"
libzmq = "0.2"
serde = "1.0"
serde_yaml = "0.8"
failure = "0.1.6"