[package]
name = "bulletproofs-server"
version = "0.1.0"
authors = ["Aurélien Nicolas <aurel@qed-it.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkinterface = "1.0.6"
#bulletproofs = { git = "https://github.com/QED-it/bulletproofs", branch = "zkinterface", features = ["yoloproofs"] }
bulletproofs = { path = "../../bulletproofs/", features = ["yoloproofs"] }
bincode = "1"
rouille = "3.0.0"
failure = "0.1.6"
